--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,16 @@
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.parallelcolt</groupId>
+            <artifactId>parallelcolt</artifactId>
+            <version>0.10.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.mahout.uncommons.math</groupId>
+            <artifactId>uncommons-math</artifactId>
+            <version>1.0.2</version>
+        </dependency>
 
         <dependency>
             <groupId>com.typesafe.akka</groupId>
