--- a/src/main/resources/traffic.conf
+++ b/src/main/resources/traffic.conf
@@ -1,7 +1,7 @@
 traffic {
 
-  cars = 10000
-  cpm = 100
+  cars = 100000000
+  cpm = 10000
 
   akka {
      # Loggers to register at boot time (akka.event.Logging$DefaultLogger logs
